--- a/Site/src/App.css
+++ b/Site/src/App.css
@@ -191,7 +191,7 @@ h2 {
 }
 
 .preset-card {
-  padding: 20px;
+  padding: 0px 20px;
   border-radius: 20px;
   border: 2px solid var(--border);
   transition: all 0.3s ease;
